--- a/index.html
+++ b/index.html
@@ -1,10 +1,179 @@
 <!DOCTYPE html>
-<html>
+<html lang="ja">
 <head>
-  <title>Pekori</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Pekori | Engineer Portfolio</title>
+  <meta name="description" content="Pekoriのエンジニアポートフォリオと個人サービス一覧" />
+
+  <style>
+    :root {
+      --bg: #f9fafb;
+      --card: #ffffff;
+      --border: #e5e7eb;
+      --accent: #2563eb;
+      --text: #111827;
+      --muted: #6b7280;
+    }
+
+    * {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+    }
+
+    body {
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
+      background: var(--bg);
+      color: var(--text);
+      line-height: 1.7;
+    }
+
+    section {
+      padding: 4rem 2rem;
+      max-width: 1000px;
+      margin: 0 auto;
+    }
+
+    h1, h2 {
+      margin-bottom: 1rem;
+    }
+
+    h1 {
+      font-size: 2.5rem;
+      font-weight: 700;
+    }
+
+    h2 {
+      font-size: 1.5rem;
+      margin-bottom: 2rem;
+    }
+
+    p {
+      color: var(--muted);
+    }
+
+    .hero {
+      text-align: center;
+      padding: 6rem 2rem 4rem;
+      background: white;
+      border-bottom: 1px solid var(--border);
+    }
+
+    .hero p {
+      margin-top: 1rem;
+      font-size: 1.1rem;
+    }
+
+    .skills {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 0.8rem;
+    }
+
+    .skill {
+      background: white;
+      border: 1px solid var(--border);
+      padding: 0.5rem 1rem;
+      border-radius: 999px;
+      font-size: 0.85rem;
+    }
+
+    .projects {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+      gap: 1.5rem;
+    }
+
+    .card {
+      background: white;
+      border: 1px solid var(--border);
+      border-radius: 12px;
+      padding: 1.5rem;
+      text-decoration: none;
+      color: inherit;
+      transition: all 0.2s ease;
+    }
+
+    .card:hover {
+      border-color: var(--accent);
+      box-shadow: 0 10px 25px rgba(0,0,0,0.05);
+      transform: translateY(-4px);
+    }
+
+    .card h3 {
+      margin-bottom: 0.5rem;
+      color: var(--accent);
+    }
+
+    footer {
+      text-align: center;
+      padding: 3rem 1rem;
+      font-size: 0.85rem;
+      color: var(--muted);
+      border-top: 1px solid var(--border);
+      background: white;
+    }
+
+    a.inline {
+      color: var(--accent);
+      text-decoration: none;
+    }
+
+    a.inline:hover {
+      text-decoration: underline;
+    }
+  </style>
 </head>
 <body>
-  <h1>Welcome to Pekori.dev</h1>
-  <a href="/score-keeper/">Score Keeper</a>
+
+  <div class="hero">
+    <h1>Pekori</h1>
+    <p>Systems Engineer / Web Developer</p>
+  </div>
+
+  <section>
+    <h2>About</h2>
+    <p>
+      個人開発と業務開発を行うエンジニア。
+    </p>
+  </section>
+
+  <section>
+    <h2>Skills</h2>
+    <div class="skills">
+      <div class="skill">HTML / CSS</div>
+      <div class="skill">JavaScript</div>
+      <div class="skill">TypeScript</div>
+      <div class="skill">Java</div>
+      <div class="skill">Python</div>
+      <div class="skill">Linux</div>
+      <div class="skill">System Design</div>
+    </div>
+  </section>
+
+  <section>
+    <h2>Projects</h2>
+    <div class="projects">
+
+      <a href="/score-keeper/" class="card">
+        <h3>Score Keeper</h3>
+        <p>シンプルなゲームスコア管理アプリ。</p>
+      </a>
+
+    </div>
+  </section>
+
+  <section>
+    <h2>Links</h2>
+    <p>
+      <a class="inline" href="https://github.com/あなたのユーザー名" target="_blank">GitHub</a>
+    </p>
+  </section>
+
+  <footer>
+    © 2026 Pekori.dev
+  </footer>
+
 </body>
 </html>
