--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
   <section>
     <h2>Links</h2>
     <p>
-      <a class="inline" href="https://github.com/あなたのユーザー名" target="_blank">GitHub</a>
+      <a class="inline" href="https://github.com/sahokk" target="_blank">GitHub</a>
     </p>
   </section>
 
