Add Reflexes Test card to the product grid in index.html

--- a/index.html
+++ b/index.html
@@ -65,6 +65,20 @@
 					</div>
 				</a>
 			</div>
+
+			<div class="product-grid">
+				<a href="/reflexes-test/" class="card">
+					<div class="icon-wrapper">
+						<img
+							src="assets/icons/reflexes-test.svg"
+							alt="Reflexes Test Icon" />
+					</div>
+					<div>
+						<h3>反射神経テスト</h3>
+						<p>反応速度を測定するツール</p>
+					</div>
+				</a>
+			</div>
 		</section>
 
 		<section>
